# OpenGLPractice

./: CMakeLists.txt  README.md  main.cpp
Buffers/include/: Framebuffer.h  Shader.h  Texture.h  VertexBuffer.h
Buffers/src/: Framebuffer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
Camera/include/: Camera.h
Camera/src/: Camera.cpp
Logger/include/: Logger.h
Model/include/: Model.h
Model/src/: Model.cpp
Renderers/include/: GLRender.h  GLRenderData.h
Renderers/src/: GLRender.cpp
Shaders/: default.frag  default.vert
Timer/include/: Timer.h
UserInterface/include/: UserInterface.h
UserInterface/src/: UserInterface.cpp
Window/include/: Window.h
Window/src/: Window.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake
